integration_tests/tests/integration_tests/snapshots/integration_tests__edition_tests__get_nft_editions-search-assets-fungible-for-master-edition.snap
---
source: integration_tests/tests/integration_tests/edition_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 0,
  "limit": 1000,
  "items": []
}
